--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
 		"no-empty-function": "error",
 		"no-floating-decimal": "error",
 		"no-inline-comments": "error",
+		"no-unused-vars": "off",
 		"no-lonely-if": "error",
 		"no-multi-spaces": "error",
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
